--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,15 +8,51 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   font-family: 'Open Sans', sans-serif;
-  background-color: yellow; }
+  background-color: grey; }
 
+/*
+THIS FILE CONTAINS CODE FOR include/header,php
+*/
+header {
+  display: grid;
+  position: fixed;
+  top: 0;
+  left: 15%;
+  background-color: White;
+  height: 60px;
+  width: 100%;
+  z-index: 2;
+  grid-template: 60px/ 2fr 1fr; }
+  header .search-box {
+    padding: 5% 0;
+    position: relative; }
+  header .search-box input {
+    width: 90%;
+    margin-left: 10%;
+    height: 90%;
+    background-color: #fcfcfc;
+    color: rgba(0, 0, 0, 0.9);
+    padding-left: 15px;
+    outline: none;
+    border: none; }
+  header .search-box img {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    cursor: pointer;
+    top: 30%;
+    right: 2%; }
+
+/*
+THIS FILE CONTAINS CODE FOR include/sidebar.php
+*/
 .sidebar {
   position: fixed;
   top: 0;
   color: rgba(255, 255, 255, 0.7);
   left: 0;
   width: 15%;
-  background-color: #0e1a25;
+  background-color: #0a1a29;
   min-height: 100vh; }
   .sidebar .profile-photo {
     height: 30vh; }
@@ -29,17 +65,22 @@ body {
       border-radius: 15px;
       font-size: 14px;
       padding: 4px; }
+      .sidebar .profile-photo .edit-profile:hover {
+        background-color: #fff;
+        border-color: #0e1a25;
+        color: #0e1a25;
+        cursor: pointer; }
   .sidebar img {
     width: 50%;
     margin: 10% 20% 5%;
     height: 60%;
     border-radius: 50%; }
   .sidebar ul {
-    margin-top: 15%;
+    margin-top: 20%;
     width: 100%; }
   .sidebar li {
     list-style-type: none;
     padding: 10% 0 10% 22%; }
     .sidebar li:hover {
       cursor: pointer;
-      background-color: #1c344a; }
+      background-color: #143452; }
