--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -3,5 +3,5 @@ body
   min-width: 100vw;
   min-height: 100vh;
   font-family: 'Open Sans', sans-serif;
-  background-color: yellow;
+  background-color: grey;
 }
