--- a/static/scss/sidebar.scss
+++ b/static/scss/sidebar.scss
@@ -1,3 +1,7 @@
+
+/*
+THIS FILE CONTAINS CODE FOR include/sidebar.php
+*/
 .sidebar
 {
   position: fixed;
@@ -7,7 +11,6 @@
   width: 15%;
   background-color: $sidebar-color;
   min-height: 100vh;
-
 
   .profile-photo
   {
@@ -23,10 +26,15 @@
     {
       border: 1px solid rgba(255,255,255,.7);
       border-radius: 15px;
-
-
       font-size: 14px;
       padding: 4px;
+      &:hover
+      {
+        background-color: #fff;
+        border-color: #0e1a25;
+        color: #0e1a25;
+        cursor: pointer;
+      }
     }
   }
   img
@@ -38,7 +46,7 @@
   }
   ul
   {
-    margin-top: 15%;
+    margin-top: 20%;
     width: 100%;
   }
   li {
