--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -3,3 +3,12 @@
 @import "layout";
 @import "header";
 @import "sidebar";
+@import "login";
+
+/*
+ADMIN FOLDER STYLESHEETS
+*/
+@import "superadmin/index";
+
+//MOBILE RESPONSIVE STYLESHEETS
+@import "mobile";
