--- a/static/scss/header.scss
+++ b/static/scss/header.scss
@@ -13,7 +13,7 @@ header {
   z-index: 2;
   grid-template: 60px/ 2fr 1fr;
   box-shadow: 20px 0 10px -3px rgba(0,0,0,.9);
-  .menu
+  .menu,.new_menu
   {
     display: none;
   }
