--- a/static/scss/layout.scss
+++ b/static/scss/layout.scss
@@ -23,3 +23,13 @@ a
 {
   text-decoration: none;
 }
+.instruction-msg
+{
+  background-color:#fcfcfc ;
+  border-radius: 5px;
+  padding: 2% 2% 2% 3%;
+  li
+  {
+  font-size: 14px;
+  }
+}
