--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,6 +24,13 @@ body {
 a {
   text-decoration: none; }
 
+.instruction-msg {
+  background-color: #fcfcfc;
+  border-radius: 5px;
+  padding: 2% 2% 2% 3%; }
+  .instruction-msg li {
+    font-size: 14px; }
+
 /*
 THIS FILE CONTAINS CODE FOR include/header,php
 */
@@ -39,7 +46,7 @@ header {
   grid-template: 60px/ 2fr 1fr;
   -webkit-box-shadow: 20px 0 10px -3px rgba(0, 0, 0, 0.9);
   box-shadow: 20px 0 10px -3px rgba(0, 0, 0, 0.9); }
-  header .menu {
+  header .menu, header .new_menu {
     display: none; }
   header .search-box {
     padding: 5% 0;
@@ -146,7 +153,7 @@ form.login-form {
     color: black;
     text-align: center;
     background-color: lightcyan;
-    padding-top: 30%; }
+    padding-top: 5%; }
 
 /*
 ADMIN FOLDER STYLESHEETS
@@ -183,3 +190,40 @@ ADMIN FOLDER STYLESHEETS
       height: 100%;
       background-color: white;
       border-radius: 5px; }
+
+.add-school-page {
+  display: grid;
+  grid-template-rows: 100px 150px;
+  grid-template-columns: 1fr;
+  grid-row-gap: 15px;
+  color: rgba(0, 0, 0, 0.7); }
+  .add-school-page label {
+    display: block; }
+  .add-school-page input {
+    width: 100%;
+    height: 40px;
+    outline: none;
+    padding: 5px;
+    border-radius: 2px; }
+  .add-school-page input[type="text"] {
+    background-color: rgba(255, 255, 255, 0.9);
+    border: 1px solid rgba(0, 0, 0, 0.7); }
+  .add-school-page input[type="submit"] {
+    width: 90%;
+    -webkit-box-shadow: 0 6px 5px -2px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 6px 5px -2px rgba(0, 0, 0, 0.7);
+    margin-top: 12%;
+    border: none;
+    color: white;
+    background-color: #009ACD;
+    cursor: pointer; }
+  .add-school-page .add-school-form {
+    padding: 2%;
+    border-radius: 5px; }
+  .add-school-page .add-school-form {
+    grid-row: 2/3;
+    background-color: white;
+    width: 100%;
+    display: grid;
+    grid-gap: 1%;
+    grid-template-columns: 20% 65% 15%; }
