--- a/static/scss/mobile/mobilebase.scss
+++ b/static/scss/mobile/mobilebase.scss
@@ -3,4 +3,6 @@
   @import "header";
   @import "login";
   @import "superadmin/index";
+  @import "superadmin/schoolpage";
+  @import "superadmin/programmeadd";
 }
