--- a/static/scss/superadmin/schoolpage.scss
+++ b/static/scss/superadmin/schoolpage.scss
@@ -10,29 +10,17 @@
   {
     display: block;
   }
-  input
-  {
-    width: 100%;
-    height: 40px;
-    outline:none;
-    padding:5px;
-    border-radius: 2px;
-  }
+
   input[type="text"]
   {
-
-    background-color: rgba(255,255,255,.9);
-    border: 1px solid rgba(0,0,0,.7);
+    @extend .text-inputs;
   }
   input[type="submit"]
   {
+    @extend .submit_inputs;
     width: 90%;
-    box-shadow: 0 6px 5px -2px rgba(0,0,0,.7);
     margin-top: 12%;
-    border: none;
-    color: white;
-    background-color: #009ACD;
-    cursor: pointer;
+    height: 30px;
   }
   .add-school-form
   {
